fix: (Stepper) button icon not aligning to center when button size get changed via css variables (#4460)

--- a/src/components/stepper/stepper.less
+++ b/src/components/stepper/stepper.less
@@ -52,6 +52,12 @@
       color: var(--adm-color-weak);
       opacity: 1;
     }
+    svg {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 
   &-minus {
